# rust_todo

./: .env  Cargo.toml  config.yaml
migrations/2023-03-07-101817_create_to_do_items/: up.sql
migrations/2023-03-09-053108_create_users/: up.sql
src/: config.rs  database.rs  jwt.rs  main.rs  processes.rs  state.rs
src/css/: base.css  main.css
src/javascript/: main.js
src/json_serialization/: login.rs  login_response.rs  to_do_items.rs
src/models/items/: item.rs  new_item.rs
src/models/user/: new_user.rs  user.rs
src/templates/: main.html
src/to_do/: enums.rs  mod.rs
src/to_do/structs/: base.rs  done.rs  pending.rs
src/to_do/traits/: create.rs  delete.rs  edit.rs  get.rs
src/views/: mod.rs
src/views/app/: items.rs  mod.rs
src/views/auth/: login.rs  mod.rs
src/views/to_do/: create.rs  delete.rs  edit.rs  get.rs  mod.rs
src/views/users/: create.rs  mod.rs
