[package]
name = "web_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-service = "2.0.2"
actix-web = "4.3.1"
bcrypt = "0.14.0"
chrono = {version = "0.4.23", features = ["serde"]}
diesel = {version = "2.0.3", features = ["postgres", "chrono", "r2d2"]}
dotenv = "0.15.0"
dotenvy = "0.15.6"
env_logger = "0.10.0"
futures = "0.3.21"
jsonwebtoken = "8.2.0"
lazy_static = "1.4.0"
serde =  { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.94"
serde_yaml = "0.9.19"
uuid = { version = "1.3.0", features = ["serde", "v4"]}
